@@ -4,6 +4,7 @@ import java.util.Collections;
 import java.util.Map;
 
 import com.fasterxml.jackson.annotation.JsonFormat;
+import com.zoostarinc.employee.utils.Messages;
 
 import lombok.AllArgsConstructor;
 import lombok.Getter;
@@ -14,24 +15,27 @@ import net.zoostar.common.core.workflow.State;
 @AllArgsConstructor
 @JsonFormat(shape = JsonFormat.Shape.OBJECT)
 public enum TimesheetState implements State<TimesheetEntity> {
-	
-	NEW("NEW", Map.of(
-			"Save", TimesheetAction.SAVE,
-			"Submit", TimesheetAction.SUBMIT)),
-	
-	CREATED("CREATED", Map.of(
-			"Save", TimesheetAction.SAVE,
-			"Submit", TimesheetAction.SUBMIT)),
-	
-	SUBMITTED("SUBMITTED", Collections.emptyMap());
-	
+
+	NEW("NEW", Map.of(Messages.getString("TimesheetAction.SAVE"), TimesheetAction.SAVE, //$NON-NLS-2$
+			Messages.getString("TimesheetAction.SUBMIT"), TimesheetAction.SUBMIT)), //$NON-NLS-1$
+
+	CREATED("CREATED",
+			Map.of(Messages.getString("TimesheetAction.SAVE"), TimesheetAction.SAVE, //$NON-NLS-1$
+					Messages.getString("TimesheetAction.SUBMIT"), TimesheetAction.SUBMIT)), //$NON-NLS-1$
+
+	SUBMITTED("SUBMITTED", Collections.emptyMap()), //$NON-NLS-1$
+
+	APPROVED("APPROVED", Collections.emptyMap()), //$NON-NLS-1$
+
+	REJECTED("REJECTED", Collections.emptyMap()); //$NON-NLS-1$
+
 	private final String name;
-	
+
 	private final Map<String, Action<TimesheetEntity>> actions;
-	
+
 	@Override
 	public String toString() {
 		return getName();
 	}
-	
+
 }
